<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_bg"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTweetUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTweetBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/whats_happening"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/tvTweetUser"
        app:layout_constraintTop_toBottomOf="@+id/tvTweetUser" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="@+id/etTweetBody"
        app:layout_constraintTop_toBottomOf="@+id/etTweetBody" />

    <TextView
        android:id="@+id/tvCharCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textSize="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>